# remotery-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/cpu/: Cargo.toml  main.rs
examples/cpu/src/: main.rs
examples/metal/: main.rs  shaders.metal
examples/opengl/: Cargo.toml  main.rs
src/: common.rs  ffi.rs  lib.rs  main.rs  metal.rs  opengl.rs
