[package]
authors = ["huisedenanhai <winser@pku.edu.cn>"]
edition = "2018"
name = "remotery-rs"
version = "0.1.0"

[build-dependencies]
cc = "1.0"

[features]
assume-little-endian = []
cuda = []
dx11 = []
metal = []
opengl = []
posix-thread-names = []

[dev-dependencies]
cocoa = "*"
foreign-types = "*"
glium = "0.29"
metal-rs = {version = "0.20", package = 'metal'}
objc = "*"
winit = "*"

[[example]]
name = "cpu"

[[example]]
name = "opengl"
required-features = ["opengl"]

[[example]]
name = "metal"
required-features = ["metal"]
